[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Pipe.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/PipeGap.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 59 )

[node name="PipeGap" type="Node2D"]
script = ExtResource( 2 )

[node name="UpperPipe1" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -180 )

[node name="UpperPipe2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -422 )

[node name="LowerPipe1" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 180 )

[node name="LowerPipe2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 422 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.0822372, 0.0822372 )
rect = Rect2( -52, -543, 104, 1086 )

[node name="ClearZone" type="Area2D" parent="."]
position = Vector2( 16.1433, -2.42834 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClearZone"]
shape = SubResource( 1 )
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
[connection signal="area_exited" from="ClearZone" to="." method="_on_ClearZone_area_exited"]
